<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/linear_layout_padding"
    android:paddingLeft="@dimen/linear_layout_padding"
    android:paddingRight="@dimen/linear_layout_padding"
    android:paddingTop="@dimen/linear_layout_padding"
    android:background="@color/white"
    tools:context="com.example.pizzapartyapp.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/title_size"
        android:textColor="@color/teal_700"/>

    </FrameLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/q1"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/q1_radio_group" />

    <RadioGroup
        android:id="@+id/q1_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/q1_opt_1"
            android:text="@string/q1_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/q1_opt_2"
            android:text="@string/q1_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/q1_opt_3"
            android:text="@string/q1_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/q2"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/q2_radio_group" />

    <RadioGroup
        android:id="@+id/q2_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/q2_opt_1"
            android:text="@string/q2_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/q2_opt_2"
            android:text="@string/q2_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/q2_opt_3"
            android:text="@string/q2_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/q3"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/q3_radio_group" />

    <RadioGroup
        android:id="@+id/q3_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/q3_opt_1"
            android:text="@string/q3_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/q3_opt_2"
            android:text="@string/q3_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/q3_opt_3"
            android:text="@string/q3_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/q4"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/q4_radio_group" />

    <RadioGroup
        android:id="@+id/q4_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/q4_opt_1"
            android:text="@string/q4_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/q4_opt_2"
            android:text="@string/q4_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/q4_opt_3"
            android:text="@string/q4_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:text="@string/q5"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_view_text_size"
        android:labelFor="@id/q5_radio_group" />

    <RadioGroup
        android:id="@+id/q5_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/q5_opt_1"
            android:text="@string/q5_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/q5_opt_2"
            android:text="@string/q5_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/q5_opt_3"
            android:text="@string/q5_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>



    <TextView
        android:id="@+id/answer"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:textSize="@dimen/text_view_text_size"
        android:textColor="@color/teal_200"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        style="@style/CalcButton"
        android:onClick="calculateClick" />







</LinearLayout>